--- a/.mergify.yml
+++ b/.mergify.yml
@@ -5,9 +5,7 @@ queue_rules:
       - status-success="validate commits"
       - status-success="flux-sched check"
       - status-success="flux-accounting check"
-      - status-success="python format"
-      - status-success="python lint"
-      - status-success="mypy"
+      - status-success="python linting"
       - status-success="bionic"
       - status-success="bionic - 32 bit"
       - status-success="bionic - gcc-8,content-s3,distcheck"
