--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,8 @@ profile = "black"
 target-version = ['py36']
 exclude = ["^env/", "^src/bindings/python/flux/utils/*/*.py", "^src/bindings/python/flux/utils/*/*/*.py"]
 
-[tool.isort]
-profile = "isort"
-exclude = ["^env/"]
+#[tool.isort]
+#profile = "isort"
 
 [tool.mypy]
 python_version = 3.6
