we have a handle!
Signed-off-by: vsoch <vsoch@users.noreply.github.com>

--- a/src/bindings/Makefile
+++ b/src/bindings/Makefile
@@ -88,7 +88,7 @@ POST_UNINSTALL = :
 build_triplet = x86_64-pc-linux-gnu
 host_triplet = x86_64-pc-linux-gnu
 target_triplet = x86_64-pc-linux-gnu
-am__append_1 = go
+#am__append_1 = go
 subdir = src/bindings
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/config/ac_pkgconfig.m4 \
@@ -215,9 +215,9 @@ AUTOCONF = ${SHELL} /workspaces/core/config/missing autoconf
 AUTOHEADER = ${SHELL} /workspaces/core/config/missing autoheader
 AUTOMAKE = ${SHELL} /workspaces/core/config/missing automake-1.16
 AWK = mawk
-AX_MAJOR_VERSION = 40b6737fb
-AX_MINOR_VERSION = b
-AX_POINT_VERSION = 
+AX_MAJOR_VERSION = 0
+AX_MINOR_VERSION = 48
+AX_POINT_VERSION = 0
 CALIPER_CFLAGS = 
 CALIPER_LIBS = 
 CC = gcc
@@ -312,10 +312,10 @@ OTOOL64 =
 PACKAGE = flux-core
 PACKAGE_BUGREPORT = 
 PACKAGE_NAME = flux-core
-PACKAGE_STRING = flux-core 40b6737fb
+PACKAGE_STRING = flux-core 0.48.0
 PACKAGE_TARNAME = flux-core
 PACKAGE_URL = 
-PACKAGE_VERSION = 40b6737fb
+PACKAGE_VERSION = 0.48.0
 PATH_SEPARATOR = :
 PKG_CONFIG = /usr/bin/pkg-config
 PYLINT = 
@@ -341,7 +341,7 @@ SSH = /usr/bin/rsh
 STRIP = strip
 VALGRIND_CFLAGS = -I/usr/include/valgrind
 VALGRIND_LIBS = -L/usr/lib/x86_64-linux-gnu/valgrind -lcoregrind-amd64-linux -lvex-amd64-linux -lgcc
-VERSION = 40b6737fb
+VERSION = 0.48.0
 WARNING_CFLAGS = -Wall -Werror -Wno-strict-aliasing -Wno-error=deprecated-declarations -Werror=missing-field-initializers
 X_BINDIR = /usr/local/bin
 X_DATADIR = /usr/local/share
