--- a/.github/workflows/libabigail.yml
+++ b/.github/workflows/libabigail.yml
@@ -42,10 +42,9 @@ jobs:
           --user root \
           fluxrm/flux-sched:focal \
           sh -c "git config --global --add safe.directory /usr/src && 
-                 git fetch && \
-                 git config --global user.email "${ACTOR}" && \
-                 git config --global user.name "Harry Potter" && \
-                 git tag -a 0.9999.0 HEAD -m "Temporary tag so it builds" &&
+                 git config --global user.email ${ACTOR} &&
+                 git config --global user.name "Harry Potter" &&
+                 git tag -a 0.9999.0 HEAD &&
                  ./autogen.sh &&
                  ./configure --prefix=/usr --sysconfdir=/etc \
                 --with-systemdsystemunitdir=/etc/systemd/system \
@@ -53,8 +52,8 @@ jobs:
                 --with-flux-security \
                 --enable-caliper &&
                make clean &&
-               make -j${JOBS} && \
-               make install && \
+               make -j${JOBS} &&
+               make install &&
                cp /usr/lib/*.so /tmp/libs"
        sudo chown -R $USER /tmp/libs
        echo "Found pull request built libs 🧐️"
