--- a/src/bindings/Makefile
+++ b/src/bindings/Makefile
@@ -206,14 +206,14 @@ am__relativize = \
     dir1=`echo "$$dir1" | sed -e "$$sed_rest"`; \
   done; \
   reldir="$$dir2"
-ACLOCAL = ${SHELL} /workspaces/core/config/missing aclocal-1.16
+ACLOCAL = ${SHELL} /workspaces/flux-core/config/missing aclocal-1.16
 AMTAR = $${TAR-tar}
 AM_DEFAULT_VERBOSITY = 0
 AR = ar
 ASPELL = aspell
-AUTOCONF = ${SHELL} /workspaces/core/config/missing autoconf
-AUTOHEADER = ${SHELL} /workspaces/core/config/missing autoheader
-AUTOMAKE = ${SHELL} /workspaces/core/config/missing automake-1.16
+AUTOCONF = ${SHELL} /workspaces/flux-core/config/missing autoconf
+AUTOHEADER = ${SHELL} /workspaces/flux-core/config/missing autoheader
+AUTOMAKE = ${SHELL} /workspaces/flux-core/config/missing automake-1.16
 AWK = mawk
 AX_MAJOR_VERSION = 0
 AX_MINOR_VERSION = 48
@@ -297,7 +297,7 @@ LUA_VERSION = 5.2
 LZ4_CFLAGS = 
 LZ4_LIBS = -llz4
 MAINT = 
-MAKEINFO = ${SHELL} /workspaces/core/config/missing makeinfo
+MAKEINFO = ${SHELL} /workspaces/flux-core/config/missing makeinfo
 MANIFEST_TOOL = :
 MKDIR_P = /usr/bin/mkdir -p
 MPICC = /usr/bin/mpicc
@@ -360,10 +360,10 @@ X_SHAREDSTATEDIR = /usr/local/com
 X_SYSCONFDIR = /usr/local/etc
 ZMQ_CFLAGS = -isystem /usr/include/mit-krb5 -I/usr/include/uuid -I/usr/include/pgm-5.2
 ZMQ_LIBS = -lczmq -lzmq
-abs_builddir = /workspaces/core/src/bindings
-abs_srcdir = /workspaces/core/src/bindings
-abs_top_builddir = /workspaces/core
-abs_top_srcdir = /workspaces/core
+abs_builddir = /workspaces/flux-core/src/bindings
+abs_srcdir = /workspaces/flux-core/src/bindings
+abs_top_builddir = /workspaces/flux-core
+abs_top_srcdir = /workspaces/flux-core
 ac_ct_AR = ar
 ac_ct_CC = gcc
 ac_ct_DUMPBIN = 
@@ -413,7 +413,7 @@ host_vendor = pc
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /workspaces/core/config/install-sh
+install_sh = ${SHELL} /workspaces/flux-core/config/install-sh
 jobtap_plugindir = ${exec_prefix}/lib/flux/job-manager/plugins
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
